--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -5,7 +5,28 @@
 .monaco-editor {
   border-radius: 24px;
 }
-
 .monaco-editor > div {
   border-radius: 24px;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #eeeeee;
+  border-radius: 4px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #9e9e9e;
+  border-radius: 4px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #bdbdbd;
 }
