feat: update ui

--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -9,6 +9,11 @@
   border-radius: 24px;
 }
 
+.MuiCardHeader-action {
+  margin-top: auto!important;
+  margin-bottom: auto!important;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 6px;
